Fixed a lot of responsiveness and overflow issues

--- a/CSS/global/boilerplate.css
+++ b/CSS/global/boilerplate.css
@@ -15,8 +15,15 @@ body {
 }
 
 section {
+    /* Fallbacks */
+    min-height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     position: relative;
     overflow: hidden;
+    min-height: 100svh;
 }
 
 body,
